# python-based-database-sync-system-

./: .gitignore  .ignore  Dockerfile  README.md  docker-compose.yaml  postgresql_custom.conf  pyproject.toml
config/: settings.py
src/: main.py
src/connectors/: base.py  mysql.py  postgresql.py
src/handlers/: event_handler.py
